fixed margin buffer error on tablet

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ td {
   display: none;
   text-align: center;
   justify-content: center;
-  margin-top: -30px;
+  /* margin-top: -30px; */
 }
 
 .text {
